overflow fix

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-color: #222222;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
